# craw4ai-fastapi

./: .gitignore  Dockerfile  Dockerfile.simple  README.md  build-background.sh  build-fast.sh  build-simple.sh  build-uv.sh  build.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  manage.sh  pyproject.toml  requirements.txt  run-dev.sh  run.py  up-dev-fast.sh  up-dev.sh  up-prod.sh  up.sh
.github/workflows/: docker-publish.yml
crawl4ai_fastapi/: main.py  models.py  utils.py
